--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,8 @@ alembic==1.14.0
 # Utilities
 python-dotenv==1.0.1
 slowapi==0.1.9
+
+# ML Dependencies (for model training)
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
